--- a/style.css
+++ b/style.css
@@ -5,15 +5,93 @@
 }
 
 #left a{
-    display:inline-block;
-    padding-left:15px;
+    display: inline-block;
+    justify-content: flex-start;
+    padding-left: 15px;
     color:#000;
     opacity:0.75;
     text-decoration: none;
+    margin: auto;
+}
+
+#navbar{
+    display: inline-block;
+    align-items: stretch;
+    width: 100%;
+}
+#right a{
+    float: right;
+    padding-right:15px;
+    padding-top: 5px;
+    color:#000;
+    opacity:0.75;
+    text-decoration: none;
+    margin: auto;
 }
 
 #searchform{
-    min-width:980px;
-    z-index:127;
+    display: inline-block;
 }
+
+div #viewport{
+    position: absolute;
+    top: 0;
+    width:100%;
+}
+
+#google-img{
+    width: 50%;
+}
+
+body{
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#footer-bar{
+    position: fixed;
+    align-items: stretch;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: lightgrey;
+}
+
+#left-footer{
+    float: left;
+}
+
+#right-footer{
+    float: right;
+}
+
+#left-footer a{
+    display: inline-block;
+    justify-content: flex-start;
+    padding-left: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    color:#000;
+    opacity:0.75;
+    text-decoration: none;
+    margin: auto;
+}
+
+#right-footer a{
+    display: inline-block;
+    justify-content: flex-start;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    color:#000;
+    opacity:0.75;
+    text-decoration: none;
+    margin: auto;
+}
+
+
+
+
+
+
 
